* Scaling fix. Mobile width behaving now.

--- a/KimonoApp/marital.html
+++ b/KimonoApp/marital.html
@@ -57,9 +57,11 @@
       </div>
     <div>
 
-    <div class="row row-eq-height buttons">
-        <img class="btn-arrow" src="Images/General/arrow_left.png" onClick="SendBackTo('formality.html', 'Formality');"/>
-        <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onClick="ForwardTo('material.html', 'Material');" disabled/>
+    <div class="nav-btns container-fluid">
+      <div class="row row-eq-height buttons">
+          <img class="btn-arrow" src="Images/General/arrow_left.png" onClick="SendBackTo('formality.html', 'Formality');"/>
+          <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onClick="ForwardTo('material.html', 'Material');" disabled/>
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
