--- a/KimonoApp/formality.html
+++ b/KimonoApp/formality.html
@@ -54,10 +54,11 @@
           </div> 
       </div>
     </div>
-
-    <div class="row row-eq-height buttons">
-      <img class="btn-arrow" src="Images/General/arrow_left.png" onClick="SendBackTo('season.html', 'Season');" />
-      <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onClick="ForwardTo('marital.html', 'Marital');" disabled/>
+    <div class="nav-btns container-fluid">
+      <div class="row row-eq-height buttons">
+        <img class="btn-arrow" src="Images/General/arrow_left.png" onClick="SendBackTo('season.html', 'Season');" />
+        <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onClick="ForwardTo('marital.html', 'Marital');" disabled/>
+      </div>
     </div>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
