* Some styling for dressing room components * Arrows added to menu on collapse

--- a/KimonoApp/formality.html
+++ b/KimonoApp/formality.html
@@ -46,11 +46,11 @@
     <div id="formality-container" class="container-fluid">
       <div class="row row-eq-height">
           <div class="col-xs-3"></div>
-          <div id="formal-card" class="formality col-xs-3" onClick="SetBuilderValue('Formality', 'Formal')">
-              <p class="formality-btn">FORMAL</p>
+          <div id="formal-card" class="formality col-xs-3 formality-card" onClick="SetBuilderValue('Formality', 'Formal')">
+              <p class="formality-btn text-center">FORMAL</p>
           </div>
-          <div id="semiformal-card" class="formality col-xs-3" onClick="SetBuilderValue('Formality', 'SemiFormal')">
-              <p class="formality-btn">SEMI&nbsp;FORMAL</p>
+          <div id="semiformal-card" class="formality col-xs-3 formality-card" onClick="SetBuilderValue('Formality', 'SemiFormal')">
+              <p class="formality-btn text-center">SEMI FORMAL</p>
           </div> 
       </div>
     </div>
