--- a/KimonoApp/marital.html
+++ b/KimonoApp/marital.html
@@ -47,11 +47,11 @@
       <div class="row row-eq-height">
         <div class="col-xs-3"></div>
           <div id="married-card" class="marital col-xs-3 card" onClick="SetBuilderValue('Marital', 'Married')">
-              <img class="scene-icon" src="Images/General/short_sleeve_icon.png" />
+              <img class="scene-icon img-responsive" src="Images/General/short_sleeve_icon.png" />
               <p class="text-center scene-label">MARRIED</p>
           </div>
           <div id="unmarried-card" class="marital col-xs-3 card" onClick="SetBuilderValue('Marital', 'Unmarried')">
-              <img class="scene-icon" src="Images/General/long_sleeve_icon.png" />
+              <img class="scene-icon img-responsive" src="Images/General/long_sleeve_icon.png" />
               <p class="text-center scene-label">UNMARRIED</p>
           </div>
       </div>
