* Added an alt-arrow for affordance * Changed some font-sizing on resize

--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -85,7 +85,7 @@
     </div>
 
     <div id="choice-panel" class="col-xs-5 text-center ui-widget-content">
-        <h1>OBI</h1>
+        <h1>OBI <span class="draggableIcon fa fa-arrows-alt pull-right"></span></h1>
         <div id="obi-container">
           <div class="col-xs-12">
             <div class="row">
