* Styled pattern page

--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-xs-2"></div>
             <div class="col-xs-8 main-room">
-                <h1 class="dressing-room-heading">Obi</h1>
+                <h1 class="dressing-room-heading">OBI</h1>
                 <canvas id="DressingRoom"></canvas>
             </div>
         </div>
@@ -75,7 +75,7 @@
         <button type="button" class="choice-collapser" data-toggle="collapse" data-target="#Choices">
             OBI <i id="caret" class="pull-right fa fa-caret-up"></i>
           </button>
-      </div>
+    </div>
     <div class="nav-btns container-fluid">
         <div class="row row-eq-height buttons">
             <img class="btn-arrow" src="Images/General/arrow_left.png" onClick="SendBackTo('material.html', 'Material');"/>
