* Fixed canvas pixelation bug :) * Hopefully fixed resizing issue on mobile

--- a/KimonoApp/pattern.html
+++ b/KimonoApp/pattern.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Kimono Play</title>
 
@@ -99,11 +99,11 @@
       </div>
     <div class="nav-btns container-fluid">
         <div class="row row-eq-height buttons">
-            <img class="btn-arrow" src="Images/General/arrow_left.png" onClick="SendBackTo('material.html', 'Material');"/>
-            <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onClick="ForwardTo('pattern.html', 'Pattern');" disabled/>
+            <img class="btn-arrow" src="Images/General/arrow_left.png" onClick="SendBackTo('obi.html', 'Obi');"/>
+            <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onClick="ForwardTo('final.html', 'Final');" disabled/>
         </div>
     </div>
-    <div id="choice-panel" class="col-xs-4 text-center ui-widget-content">
+    <div id="choice-panel" class="col-xs-3 text-center ui-widget-content">
       <h1>PATTERN<span class="draggableIcon fa fa-arrows-alt pull-right"></span></h1>
       <div id="pattern-container">
           <div class="row">
