* Added intro alert * Another potential mobile fix added

--- a/KimonoApp/index.html
+++ b/KimonoApp/index.html
@@ -25,6 +25,7 @@
     </div>
     <script type="text/javascript">
         localStorage.removeItem("ScenarioValues");
+        localStorage.removeItem("ScenarioAlerts");
     </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
