--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -73,6 +73,36 @@
         </div>
     </div>
 
+    <div class="modal fade" id="AlertModal" role="dialog">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Gameplay Rules</h4>
+            </div>
+            <div class="modal-body">
+                <h4>SELECT YOUR SCENE</h4>
+                <p>
+                    The scene determines the type of kimono that you will wear.
+                    Select your marital status, season, and formality to set the scene.
+                </p>
+                <h4>KIMONO KITSUKE</h4>
+                <p>
+                    Kitsuke is the art of wearing kimono by knowing which shape, colour, thickness, pattern
+                    and design is appropriate for every situation.
+                    You will need to choose the correct kimono fabric thickness, colour, obi, and pattern based 
+                    on your scene selection.
+                    Learn as you choose - follow the tips to learn how marriage status, season, and formality affect the type 
+                    of kimono you should wear. If you make an incorrect choice, read the information bubbles to learn more and try again!
+                </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert();">Let's go!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
