--- a/KimonoApp/material.html
+++ b/KimonoApp/material.html
@@ -49,8 +49,8 @@
   <body class="text-center">
     <div class="container DressingRoom col-xs-12">
         <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8 main-room">
+            <div id="LeftGrid" class="col-xs-2"></div>
+            <div id="MainRoom" class="col-xs-8 main-room">
                 <h1 class="dressing-room-heading">Material</h1> <!-- TODO Tooltip Descriptor for Materials -->
                 <div id="material-container">
                     <button id="Awase" class="btn material" data-toggle="popover" data-trigger="hover" title="Awase" data-content="It's totally a fabric.">AWASE</button>
