--- a/KimonoApp/pattern.html
+++ b/KimonoApp/pattern.html
@@ -51,8 +51,8 @@
   <body class="text-center">
     <div class="container DressingRoom col-xs-12">
         <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8 main-room">
+            <div id="LeftGrid" class="col-xs-2"></div>
+            <div id="MainRoom" class="col-xs-8 main-room">
                 <h1 class="dressing-room-heading">Pattern</h1>
                 <canvas id="DressingRoom"></canvas>
             </div>
