* Added final page * Added some more landing alerts * Changed pattern mobile panel to have longer rows * Resized alerts

--- a/KimonoApp/material.html
+++ b/KimonoApp/material.html
@@ -85,6 +85,33 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="AlertModal" role="dialog">
+        <div class="modal-dialog modal-md">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Choose Kimono</h4>
+            </div>
+            <div class="modal-body">
+                <h4>KIMONO KITSUKE</h4>
+                <p>
+                    You are wearing a <i>nagajuban.</i> The white <i>nagajuban</i> worn under your kimono is the first layer 
+                    worn over top of your slip and undershirt (<i>juban</i>). The <i>nagajuban</i> is a long kimono-shaped robe
+                    that prevents the delicate Kimono from touching your skin. Only the white collar of the <i>nagajuban</i> remains 
+                    visible while wearing Kimono.
+                </p>
+                <h4>KIMONO MATERIAL</h4>
+                <p>
+                    Choose the correct type of fabric for the season.
+                </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert('Material');">Let's go!</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
