--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -85,7 +85,7 @@
     </div>
 
     <div id="choice-panel" class="col-xs-5 text-center ui-widget-content">
-        <h1>OBI <span class="draggableIcon fa fa-arrows-alt pull-right"></span></h1>
+        <h1>OBI <span class="draggableIcon fa fa-drag-handle pull-right"></span></h1>
         <div id="obi-container">
           <div class="col-xs-12">
             <div class="row">
@@ -118,6 +118,28 @@
       </div>
     </div>
 
+    <div class="modal fade" id="AlertModal" role="dialog">
+        <div class="modal-dialog modal-md">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Choose Obi</h4>
+            </div>
+            <div class="modal-body">
+                <h4>OBI</h4>
+                <p>
+                  <i>Obi</i> refers to the large sash that is tied around the <i>kimono</i> to hold it in place, 
+                  while acting as a complimentary decorative ornament. The <i>obijime</i> is a long cord that is tied 
+                  around the <i>obi</i> which holds the <i>obi</i> in place ensuring that the entire kimono stays tied 
+                  together. The <i>obi</i> can be tied in a variety of styles.
+                </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert('Obi');">Let's go!</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
