--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="modal fade" id="AlertModal" role="dialog">
-        <div class="modal-dialog modal-sm">
+        <div class="modal-dialog modal-md">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -97,7 +97,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert();">Let's go!</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert('Season');">Let's go!</button>
             </div>
           </div>
         </div>
