--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -106,10 +106,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Oh no!</h4>
+            <h4 class="modal-title"></h4>
           </div>
           <div class="modal-body">
-            <p id="season-alert"></p>
+            <p id="obi-alert"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -121,7 +121,7 @@
     <div class="modal fade" id="AlertModal" role="dialog">
         <div class="modal-dialog modal-md">
           <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header correct">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
               <h4 class="modal-title">Choose Obi</h4>
             </div>
@@ -145,6 +145,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="js/text-dictionary.js"></script>
     <script src="js/common-fn.js"></script>
     <script src="js/common-canvas-fn.js"></script>
   </body>
