--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -76,7 +76,7 @@
     <div class="modal fade" id="AlertModal" role="dialog">
         <div class="modal-dialog modal-md">
           <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header correct">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
               <h4 class="modal-title">Gameplay Rules</h4>
             </div>
